# 2025-02-14_stock-market-visualizer

./: .env.example  .gitignore  README.md  docker-compose.yml  run.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: execution.py  ingestion.py  intelligence.py  scheduler.py  signal.py
backend/app/models/: schemas.py  sql.py
backend/app/routers/: agent.py  health.py  market.py  portfolio.py  system.py  trades.py
backend/app/services/: cache.py  ollama.py  paper_trade.py  polygon.py  scraper.py
backend/app/utils/: market_hours.py
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agent-logic/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/system-graph/: page.tsx
frontend/src/app/trades/: page.tsx
frontend/src/components/dashboard/: ActivePositions.tsx  IndustryRadar.tsx  PerformanceChart.tsx  PortfolioHeader.tsx  RecentTrades.tsx  StocksOfInterest.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  ThemeToggle.tsx  Topbar.tsx
frontend/src/hooks/: useApi.ts  useTheme.ts  useWebSocket.ts
frontend/src/lib/: api.ts  formatters.ts
infra/: README.md
infra/mongo/: init-mongo.js
infra/mysql/: init.sql
scripts/: dev.sh
