[project]
name = "smv-backend"
version = "0.1.0"
description = "Stock Market Visualizer — Backend API & Agent Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",

    # Database — MySQL (async)
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",

    # Database — MongoDB (async)
    "motor>=3.6.0",

    # Database — Redis (async)
    "redis[hiredis]>=5.2.0",

    # HTTP client (Polygon, Ollama)
    "httpx>=0.28.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # IBKR
    "ib_insync>=0.9.86",

    # Scraping
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",

    # Config
    "pydantic-settings>=2.7.0",

    # Migrations
    "alembic>=1.14.0",
    "pymysql>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx",  # for TestClient
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
